--- a/lib/lang/en/phrases/altmetric.xml
+++ b/lib/lang/en/phrases/altmetric.xml
@@ -6,5 +6,6 @@
 <epp:phrase id="lib/altmetric:unknown_error">An error has occured whilst retrieving data from Altmetric.</epp:phrase>
 
 <epp:phrase id="Plugin/Screen/EPrint/Box/Altmetric:title">Altmetric</epp:phrase>
+<epp:phrase id="Plugin/Screen/EPrint/Box/Altmetric:default_content"><p><epc:pin name="default_link">View Altmetric information about this item</epc:pin>.</p></epp:phrase>
 
 </epp:phrases>
