--- a/lib/lang/en/phrases/altmetric.xml
+++ b/lib/lang/en/phrases/altmetric.xml
@@ -3,7 +3,7 @@
 <epp:phrases xmlns="http://www.w3.org/1999/xhtml" xmlns:epp="http://eprints.org/ep3/phrase" xmlns:epc="http://eprints.org/ep3/control">
 
 <epp:phrase id="lib/altmetric:not_found">No Altmetrics are currently available for this publication.</epp:phrase>
-<epp:phrase id="lib/altmetric:unknown_error">An error has occured whilst retrieving data from Altmetric.</epp:phrase>
+<epp:phrase id="lib/altmetric:unknown_error">An error has occurred whilst retrieving data from Altmetric.</epp:phrase>
 
 <epp:phrase id="Plugin/Screen/EPrint/Box/Altmetric:title">Altmetric</epp:phrase>
 <epp:phrase id="Plugin/Screen/EPrint/Box/Altmetric:default_content"><p><epc:pin name="default_link">View Altmetric information about this item</epc:pin>.</p></epp:phrase>
