--- a/lang/en/phrases/altmetric.xml
+++ b/lang/en/phrases/altmetric.xml
@@ -5,6 +5,9 @@
 <epp:phrase id="lib/altmetric:not_found">No Altmetrics are currently available for this publication.</epp:phrase>
 <epp:phrase id="lib/altmetric:unknown_error">An error has occurred whilst retrieving data from Altmetric.</epp:phrase>
 
+<epp:phrase id="lib/altmetric:bad_id">No Altmetrics are currently available for this publication. This may be due to an issue with the identifier.</epp:phrase>
+<epp:phrase id="lib/altmetric:json_decode_error">There was a problem with the Altmetric data. This has been logged.</epp:phrase>
+
 <epp:phrase id="Plugin/Screen/EPrint/Box/Altmetric:title">Altmetric</epp:phrase>
 <epp:phrase id="Plugin/Screen/EPrint/Box/Altmetric:default_content"><p><epc:pin name="default_link">View Altmetric information about this item</epc:pin>.</p></epp:phrase>
 
