--- a/lang/en/phrases/altmetric.xml
+++ b/lang/en/phrases/altmetric.xml
@@ -3,6 +3,7 @@
 <epp:phrases xmlns="http://www.w3.org/1999/xhtml" xmlns:epp="http://eprints.org/ep3/phrase" xmlns:epc="http://eprints.org/ep3/control">
 
 <epp:phrase id="lib/altmetric:not_found">No Altmetrics are currently available for this publication.</epp:phrase>
+<epp:phrase id="lib/altmetric:auth_reqd">The Altmetrics API now requires a key. Please refer to the EPrints/Altmetric documenation.</epp:phrase>
 <epp:phrase id="lib/altmetric:unknown_error">An error has occurred whilst retrieving data from Altmetric.</epp:phrase>
 
 <epp:phrase id="lib/altmetric:bad_id">No Altmetrics are currently available for this publication. This may be due to an issue with the identifier.</epp:phrase>
