--- a/lang/en/phrases/altmetric.xml
+++ b/lang/en/phrases/altmetric.xml
@@ -4,6 +4,7 @@
 
 <epp:phrase id="lib/altmetric:not_found">No Altmetrics are currently available for this publication.</epp:phrase>
 <epp:phrase id="lib/altmetric:auth_reqd">The Altmetrics API now requires a key. Please refer to the EPrints/Altmetric documenation.</epp:phrase>
+<epp:phrase id="lib/altmetric:forbidden">No access to the Altmetrics API.</epp:phrase>
 <epp:phrase id="lib/altmetric:rate_limited">Too many requests - rate limited.</epp:phrase>
 <epp:phrase id="lib/altmetric:unknown_error">An error has occurred whilst retrieving data from Altmetric.</epp:phrase>
 
