--- a/lang/en/phrases/altmetric.xml
+++ b/lang/en/phrases/altmetric.xml
@@ -6,6 +6,7 @@
 <epp:phrase id="lib/altmetric:auth_reqd">The Altmetric API now requires a key. Please refer to the EPrints/Altmetric documentation.</epp:phrase>
 <epp:phrase id="lib/altmetric:forbidden">No access to the Altmetric API.</epp:phrase>
 <epp:phrase id="lib/altmetric:rate_limited">Too many requests - rate limited.</epp:phrase>
+<epp:phrase id="lib/altmetric:down_for_maintenance">Altmetric unavailable due to maintenance.</epp:phrase>
 <epp:phrase id="lib/altmetric:unknown_error">An error has occurred whilst retrieving data from Altmetric.</epp:phrase>
 
 <epp:phrase id="lib/altmetric:bad_id">No Altmetrics are currently available for this publication. This may be due to an issue with the identifier.</epp:phrase>
