--- a/lang/en/phrases/altmetric.xml
+++ b/lang/en/phrases/altmetric.xml
@@ -22,7 +22,7 @@
 	See https://details-page-api-docs.altmetric.com/data-endpoints-counts.html#response-object for details of the
 	data available in the API response.
 -->
-<epp:phrase id="lib/altmetric:cited_by_bluesky"><span><epc:pin name="count" /></span> bluesky user</epp:phrase>
+<epp:phrase id="lib/altmetric:cited_by_bluesky"><span><epc:pin name="count" /></span> Bluesky user</epp:phrase>
 <epp:phrase id="lib/altmetric:cited_by_bluesky_plural"><epc:phrase ref="lib/altmetric:cited_by_bluesky"><epc:param name="count"><epc:pin name="count" /></epc:param></epc:phrase>s</epp:phrase>
 
 <epp:phrase id="lib/altmetric:cited_by_fbwalls"><span><epc:pin name="count" /></span> Facebook page</epp:phrase>
